# StockClient

./: README.md
sources/: CMakeLists.txt  CandleWidget.cpp  CandleWidget.h  JsonParser.cpp  JsonParser.h  Macros.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  Stock.h  Tushare.cpp  Tushare.h  main.cpp
